--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -12,7 +12,7 @@
         "welcome": "Welcome"
     },
     "banner": {
-        "title1": "MEDICAL BACKGROUND",
+        "title1": "MEDICAL PLATFORM",
         "title2": "COMPREHENSIVE HEALTH CARE",
         "search": "Find a medical specialist...",
         "child1": "Specialist examination",
@@ -52,5 +52,9 @@
         "save": "Save",
         "upload-image": "Upload image",
         "edit": "Update"
+    },
+    "homepage": {
+        "outstanding-doctor": "OutStanding Doctors",
+        "more-info": "More Info"
     }
 }
