--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -59,5 +59,8 @@
     "homepage": {
         "outstanding-doctor": "Bác sĩ nổi bật tuần qua",
         "more-info": "Xem thêm"
+    },
+    "manage-schedule": {
+        "title": "Quản lý kế hoạch khám bệnh của Bác sĩ"
     }
 }
