--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -80,7 +80,13 @@
             "select-doctor":"Select doctor",
             "intro":"Introduction",
             "add":"Create info",
-            "save":"Update info"
+            "save":"Update info",
+            "price":"Price",
+            "payment":"Payment",
+            "province":"Province",
+            "nameClinic":"Clinic's name",
+            "addressClinic":"Clinic's address",
+            "note":"Note"
         }
     }
 }
