--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -79,6 +79,20 @@
             "detail":"Xem chi tiết",
             "payment":"Bệnh nhân có thể thanh toán chi phí bằng hình thức: ",
             "hide-price":"Ẩn bảng giá"
+        },
+        "booking-modal":{
+            "title":"Thông tin đặt lệnh khám bệnh",
+            "fullName":"Họ & tên",
+            "phoneNumber":"Số điện thoại",
+            "email":"Email",
+            "address":"Địa chỉ liên lạc",
+            "reason":"Lý do khám",
+            "birthday":"Ngày sinh",
+            "gender":"Giới tính",
+            "btnConfirm":"Xác nhận",
+            "btnCancel":"Hủy",
+            "priceBooking":"Miễn phí đặt lịch",
+            "price":"Giá khám: "
         }
     },
     "admin":{
