--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -108,7 +108,9 @@
             "province":"Tỉnh thành",
             "nameClinic":"Tên phòng khám",
             "addressClinic":"Địa chỉ phòng khám",
-            "note":"Ghi chú"
+            "note":"Ghi chú",
+            "specialty":"Chuyên khoa",
+            "clinic":"Phòng khám"
         }
     }
 }
